[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walkingpad-controller"
version = "0.4.0"
description = "Python library for controlling KingSmith WalkingPad treadmills over BLE (FTMS and legacy WiLink protocols)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mcdax" },
]
keywords = ["walkingpad", "kingsmith", "treadmill", "bluetooth", "ble", "ftms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "bleak>=0.20.0",
]

[project.optional-dependencies]
wilink = [
    "ph4-walkingpad>=1.0.0",
]
all = [
    "walkingpad-controller[wilink]",
]

[project.urls]
Homepage = "https://github.com/mcdax/walkingpad-controller"
Repository = "https://github.com/mcdax/walkingpad-controller"
Issues = "https://github.com/mcdax/walkingpad-controller/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/walkingpad_controller"]
